# lsd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindUnistring.cmake  FindVorbisFile.cmake
docs/: Предисловие.html
lsd.xcodeproj/: project.pbxproj
lsd.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
lsd.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: dsl_dictzip.c  dsl_dictzip.h  dsl_reader.c  dsl_reader.h  lsa_reader.c  lsa_reader.h  lsd_bitstream.c  lsd_bitstream.h  lsd_decoder.c  lsd_decoder.h  lsd_huffman.c  lsd_huffman.h  lsd_page_store.c  lsd_page_store.h  lsd_platform.h  lsd_reader.c  lsd_reader.h  lsd_types.c  lsd_types.h  lsd_utils.c  lsd_utils.h
tests/: CMakeLists.txt  main.c  probe_prefix.c  test_bitstream.c  test_fixture.c  test_platform.h  test_reader.c  test_utils.c  unity_config.h
tests/data/: abbr_14_eng_rus_greatbritain_x5_abrv.lsd  abbr_15_abbrev.lsd  system_14_activederu.lsd  system_15_activederu.lsd  user_11_international_lighting_vocabulary_cie_publ_no_17.lsd  user_12_accountingenru.lsd  user_13_ru_be_false_friends_yzb_1_0_x3.lsd  user_14_eng_rus_greatbritain_x5.lsd  user_legacy_accountingenru.lsd
